--- a/public/gallery.css
+++ b/public/gallery.css
@@ -60,6 +60,11 @@
   -webkit-overflow-scrolling: touch;
 }
 
+.tag-filter::after {
+  content: '';
+  padding-right: 20px; /* Ensure last item has spacing */
+}
+
 .tag-filter::-webkit-scrollbar {
   display: none;
 }
